--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.mycompany</groupId>
-	<artifactId>jenkin-maven-cicd</artifactId>
+	<artifactId>jenkin-maven-cicd-knr</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
 
@@ -14,8 +14,9 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.1.4</app.runtime>
+		<mule.version>4.1.5</mule.version>
 		<mule.maven.plugin.version>3.1.6</mule.maven.plugin.version>
-	<munit.version>2.1.3</munit.version>
+		<munit.version>2.1.3</munit.version>
     </properties>
 
 	<build>
@@ -51,6 +52,54 @@
                     </coverage>
                 </configuration>
             </plugin>
+        <!-- CICD -->
+        <!--  <plugin>
+		         <groupId>org.apache.maven.plugins</groupId>
+		         <artifactId>maven-compiler-plugin</artifactId>
+		         <configuration>
+		             <source>1.8</source>
+		             <target>1.8</target>
+		         </configuration>			
+			</plugin> -->
+            <plugin>
+			  <groupId>org.mule.tools.maven</groupId>
+			  <artifactId>mule-maven-plugin</artifactId>
+			  <version>${mule.maven.plugin.version}</version>
+			</plugin>
+			<plugin>
+			       <groupId>org.mule.tools.maven</groupId>
+			       <artifactId>mule-maven-plugin</artifactId>
+			       <version>${mule.maven.plugin.version}</version>
+			       <extensions>true</extensions>
+			         <configuration>
+			           <cloudHubDeployment>
+			           	 <!--  <deploymentType>cloudhub</deploymentType> -->
+			             <uri>https://anypoint.mulesoft.com</uri>;
+			             <muleVersion>${mule.version}</muleVersion>
+ 						 <applicationName>${artifactId}</applicationName>
+						 <deploymentTimeout>300000</deploymentTimeout>
+			             <username>raolkn2519</username>
+			             <password>Anypoint123</password>
+			             <workers>1</workers>
+			             <workerType>MICRO</workerType>
+			             <region>us-east-2</region>
+			             <environment>Sandbox</environment>
+			             <!-- <businessGroup>test</businessGroup> -->
+			           </cloudHubDeployment>
+
+			         <executions>
+			           <execution>
+			             <id>deploy</id>
+			             <phase>deploy</phase>
+			             <goals>
+			               <goal>deploy</goal>
+			             </goals>
+			           </execution>
+			         </executions>
+			       </configuration>
+			     </plugin>			
+        <!-- CICD END-->
+			 
         </plugins>
 	</build>
 
@@ -106,6 +155,13 @@
                 <enabled>false</enabled>
             </snapshots>
         </pluginRepository>
+        <!-- CICD -->
+        <pluginRepository>
+	        <id>mule-public</id>
+	        <url>https://repository.mulesoft.org/nexus/content/repositories/releases</url>
+	    </pluginRepository>
+        <!-- CICD END -->
+        
     </pluginRepositories>
 
 </project>
